                               Release History
===========================================================================

3.3 to 3.4: (xx. xx, 2010)

  * Updated built-in version of the PNG library to the latest version.

  * Updated internal ROM properties database to ROM-Hunter version 6
    (thanks go to RomHunter for his tireless research in this area).

-Have fun!


3.2.2 to 3.3: (November 12, 2010)

  * Added the following Distella 'directives', which are used to override
    and specifically tell the debugger how to treat address space (CODE,
    GFX, PGFX, DATA, ROW).  See the debugger documentation for more
    information.

  * Disassembly from the debugger is now tracked by the emulation core,
    and accented by the built-in Distella code.  Basically, the emulation
    core knows when an address is referenced as code, making for very
    accurate disassembled output.  Related to this, the emulation core now
    tracks accesses to GRPx and PFx registers, automatically marking the
    addresses as GFX or PGFX sections.  This will be improved in future
    releases, as there are many ways to store data in the graphics
    registers.

  * Improved output of graphics output in the disassembler, by marking
    such addresses with a bitmap of the data they represent.  This
    allows player graphics (GFX directive) and playfield graphics (PGFX
    directive) to really stand out in the disassembly.  Related to this,
    added ability to edit such graphics in either binary or hexidecimal.

  * Added preliminary support for Distella configuration files.  Much
    more work is required in this area, since Stella now contains
    directives that don't yet exist in the standalone Distella program.
    Configuration files are automatically loaded, and debugger commands
    now exist to load and save configuration directives directly from
    the debugger.

  * Added the following commands to the debugger prompt: